brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_arithmetic_expression.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"a$((1+2))b c\")?"
---
TokenizerResult(
  input: "a$((1+2))b c",
  result: [
    Word("a$((1+2))b", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 10,
        line: 1,
        column: 11,
      ),
    )),
    Word("c", SourceSpan(
      start: SourcePosition(
        offset: 11,
        line: 1,
        column: 12,
      ),
      end: SourcePosition(
        offset: 12,
        line: 1,
        column: 13,
      ),
    )),
  ],
)
