brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_arithmetic_expression_with_parens.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"$(( (0) ))\")?"
---
TokenizerResult(
  input: "$(( (0) ))",
  result: [
    Word("$(( (0) ))", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 10,
        line: 1,
        column: 11,
      ),
    )),
  ],
)
