brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_arithmetic_expression_with_space.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"$(( 1 ))\")?"
---
TokenizerResult(
  input: "$(( 1 ))",
  result: [
    Word("$(( 1 ))", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 8,
        line: 1,
        column: 9,
      ),
    )),
  ],
)
