brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_backquote_with_escape.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"echo `echo\\`hi`\")?"
---
TokenizerResult(
  input: "echo `echo\\`hi`",
  result: [
    Word("echo", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
    )),
    Word("`echo\\`hi`", SourceSpan(
      start: SourcePosition(
        offset: 5,
        line: 1,
        column: 6,
      ),
      end: SourcePosition(
        offset: 15,
        line: 1,
        column: 16,
      ),
    )),
  ],
)
