brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_braced_parameter_expansion-2.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"a${x}b\")?"
---
TokenizerResult(
  input: "a${x}b",
  result: [
    Word("a${x}b", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 6,
        line: 1,
        column: 7,
      ),
    )),
  ],
)
