brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_braced_parameter_expansion.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"${x}\")?"
---
TokenizerResult(
  input: "${x}",
  result: [
    Word("${x}", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
    )),
  ],
)
