brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_command_substitution_containing_extglob.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"echo $(echo !(x))\")?"
---
TokenizerResult(
  input: "echo $(echo !(x))",
  result: [
    Word("echo", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
    )),
    Word("$(echo !(x))", SourceSpan(
      start: SourcePosition(
        offset: 5,
        line: 1,
        column: 6,
      ),
      end: SourcePosition(
        offset: 17,
        line: 1,
        column: 18,
      ),
    )),
  ],
)
