brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_comment.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"a #comment\n\")?"
---
TokenizerResult(
  input: "a #comment\n",
  result: [
    Word("a", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 1,
        line: 1,
        column: 2,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        offset: 2,
        line: 1,
        column: 3,
      ),
      end: SourcePosition(
        offset: 11,
        line: 2,
        column: 1,
      ),
    )),
  ],
)
