brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_comment_at_eof.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"a #comment\")?"
---
TokenizerResult(
  input: "a #comment",
  result: [
    Word("a", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 1,
        line: 1,
        column: 2,
      ),
    )),
  ],
)
